--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,6 @@ Carthage/Build
 
 fastlane/report.xml
 fastlane/screenshots
+.DS_Store
+T365CalculatorScreens/.DS_Store
+T365CalculatorScreens/Base.lproj/.DS_Store
