--- a/T365CalculatorScreens/Info.plist
+++ b/T365CalculatorScreens/Info.plist
@@ -20,6 +20,25 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Proxima Nova Black It.otf</string>
+		<string>Proxima Nova Black.otf</string>
+		<string>Proxima Nova Bold It.otf</string>
+		<string>Proxima Nova Bold.otf</string>
+		<string>Proxima Nova Light It.otf</string>
+		<string>Proxima Nova Light.otf</string>
+		<string>Proxima Nova Medium It.otf</string>
+		<string>Proxima Nova Medium.otf</string>
+		<string>Proxima Nova Reg It.otf</string>
+		<string>Proxima Nova Reg.otf</string>
+		<string>Proxima Nova Sbold It.otf</string>
+		<string>Proxima Nova Sbold.otf</string>
+		<string>Proxima Nova Thin It.otf</string>
+		<string>Proxima Nova Thin.otf</string>
+		<string>Proxima Nova Xbold It.otf</string>
+		<string>Proxima Nova Xbold.otf</string>
+	</array>
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
